Avoid jumping for a form after validation (in case of errors)
<==== Mercurial data ====>
Branch: cloud_portal_default

--- a/cloud_portal/front_end/app/styles/main.css
+++ b/cloud_portal/front_end/app/styles/main.css
@@ -109,3 +109,9 @@ body {
 .anonymous .loading-visible{
     display: none;
 }
+
+@media (min-width: 768px) {
+    .help-block {
+        position: absolute;
+    }
+}
